static/css/hebrew2018-09-27.css
/* ... */
#select_contents_lang table tr td {
    background-color: #ffffee;
}
#select_contents_lang table tr td a.itemnav {
    font-family: Verdana, Arial, sans-serif;
    font-weight: normal;
    font-size: small;
    color: #448844;
    background-color: #ffffee;
}
#select_contents_lang table tr td.active {
    font-weight: bold;
    color: #229922;
    background-color: #ffffaa;
}
#select_contents_lang table tr td.active a.itemnav {
    font-weight: bold;
}
table.books {
    width: 100%;
}
td.book {
    font-family: Verdana, Arial, sans-serif;
    font-weight: normal;
    font-size: small;
    color: #448844;
    background-color: #ffffee;
    border: 1px solid #448844;
}
th.booklang {
    font-family: Verdana, Arial, sans-serif;
    font-weight: bold;
    font-size: small;
    color: #448844;
    background-color: #ffffee;
    border: 1px solid #448844;
}
.vhl {
    background-color: #ffffe0;
}
#select_control_lang {
    background-color: #ffffee;
}

#thelang {
    font-family: Verdana, Arial, sans-serif;
    font-weight: normal;
    font-size: small;
    display: inline;
    vertical-align: text-bottom;
    color: #448844;
}
/* MATERIAL VIEW */

#viewlink,#page_title,#material_settings,#material_select {
    display: inline;
    vertical-align: text-bottom;
}

/* MATERIAL PAGINATION */

.pagination {
    text-align: center;
}
.pagination ul li {
    padding: 0pt;
}
#select_contents_book .pagination ul li a {
    width: 95px;
}
.itemnav {
    border-radius: 6pt;
    border: 1pt solid #dde6dd;
    background-color: #eef1ee;
    padding: 0pt;
    font-size: small;
    margin: 0pt;
}
.active .itemnav {
    font-weight: bold;
}
#qresults,#wresults {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
}

/* MATERIAL */

/* -webkit-overflow-scrolling: touch 
   this is needed for good scrolling on ios devices. Without it, scrolling is either not smooth, or not possible at all on
   mobile safari
*/
#material_txt_p,#material_txt_tb1,#material_txt_tb2,#material_txt_tb3,#queries,#recentq,#notes,#opqforms,#opqctrl,#words,#letters {
    overflow: scroll;
    -webkit-overflow-scrolling: touch;
}
#opqforms,#opqctrl {
    display: none;
}
#recentq {
    width: 100%;
    height: 10em;
}
#recentqi {
    width: 200%;
    font-size: small;
}
span[m] {
    border-radius: 0.3rem;
}
span.vref, span.vrefi {
    font-family: Verdana, Arial, sans-serif;
    font-size: small;
    text-align: right;
    direction: ltr;
}
span.vref {
    display: block;
}
span.vreft {
    font-family: Verdana, Arial, sans-serif;
    font-size: small;
    text-align: right;
    float: left;
    direction: ltr;
}
a.crossref,.nt_cmt a {
    color: #000088;
    background-color: #ffffff;
}

/* SIDEBAR ITEMS: BOTH */

table.item_w,table.item_q {
    display: inline-table;
    padding: 0;
    margin: 0;
    border: 0;
    width: 100%;
}
table.item_w td,table.item_q td {
    vertical-align: text-bottom;
}

.pnll ul {
    margin: 0pt;
}

td#theqid {
    font-size: x-small;
    color: #999999;
}

/* VIEW SETTINGS */

.qhradio.ison,.whradio.ison,.mhradio.ison,.mtradio.ison,.qvradio.ison,.nvradio.ison,.qfradio.ison,.nfradio.ison,.qlradio.ison,.nlradio.ison,.qpradio.ison,.npradio.ison,.pradio.ison,.fa.ctrl.ison,.fa.ctrlb.ison,.fa.ctrli.ison,.fa.ctrld.ison,.fa.ctrll.ison {
    font-weight: normal;
    background-color: #888888;
    color: #ffff00;
}
.qhradio,.whradio,.mhradio,.mtradio,.qvradio,.nvradio,.qfradio,.nfradio,.qlradio,.nlradio,.qpradio,.npradio,.pradio {
    font-weight: normal;
    background-color: #fafffa;
    color: #aaaaaa;
}
.mvradio {
    font-weight: normal;
    font-size: medium;
    background-color: #eeeeff;
    color: #aaaaaa;
}
.mvradio.isdis {
    font-weight: normal;
    font-size: medium;
    background-color: #ffdddd;
    color: #aaaaaa;
}
.mvradio.ison {
    font-weight: bold;
    font-size: medium;
    background-color: #888888;
    color: #ffff00;
}
.sversion {
    font-weight: bold;
    font-size: large;
}
.sversion.this {
    color: #000000;
}
.sversion.other {
    color: #0000ff;
}
a.vradio {
    font-weight: normal;
    background-color: #eeeeff;
    color: #0000cc;
}
a.vradio.ison {
    font-weight: bold;
    background-color: #eeffee;
    color: #00cc00;
}
.isoff {
    background-color: #fafffa;
    color: #aaaaaa;
}
.ison {
    background-color: #888888;
    color: #ffff00;
}


table.hlsettings {
    display: inline-table;
    padding: 0;
    margin: 0;
    border: 0;
    text-align: center;
}

/* CONTROLS */

.ctrl {
    border-radius: 6pt;
    border: 1pt solid #dde6dd;
    background-color: #fafffa;
    padding: 2pt;
}
.ctrlb {
    border-radius: 0pt;
    border: 0pt solid #ffffff;
    background-color: #fafffa;
    padding: 0pt;
}
.ctrli {
    border-radius: 6pt;
    border: 1pt solid #dde6dd;
    background-color: #fafffa;
}
.source.ctrli {
    padding: 1pt;
    background-color: #ffffff;
    font-size: large;
    font-family: Verdana, Arial, sans-serif;
    font-weight: bold;
    display: inline;
    vertical-align: text-bottom;
}
.ctrld {
    border-radius: 4pt;
    border: 1pt solid #eeeeee;
    padding-top: 1pt;
    padding-bottom: 1pt;
}
.ctrll {
    border-radius: 8pt;
    border: 1pt solid #dde6dd;
    background-color: #eef1ee;
    display: block;
    text-align: center;
    padding: 2pt;
}
.pnl {
    border-radius: 12pt;
    border: 1pt solid #dde6dd;
    background-color: #eef1ee;
    padding: 2pt;
    text-align: center;
}
.reltool {
    border-radius: 12pt;
    border: 1pt solid #ffffaa;
    background-color: #ffffee;
    padding: 2pt;
    text-align: center;
    margin-bottom: 1em;
}
.reltoolc {
}
.reltoolc img {
}
#side_bar_mq, #side_bar_mw, #side_bar_rq, #side_bar_rw, #querybody {
    border-radius: 12pt;
    border: 1pt solid #dde6dd;
    background-color: #eef1ee;
    padding: 2pt;
    margin-bottom: 8pt;
}
#side_material_mq,#side_material_mw {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
}
#bigger {
    background-color: #eef1ee;
    padding: 2pt;
}
/* ... */

